package aisafe.maker.repositories;

import aisafe.maker.domain.Maker;
import eapli.framework.domain.repositories.DomainRepository;

public interface MakerRepository extends DomainRepository<String, Maker> {
}
